<resources>
    <string name="app_name">App_Entregas</string>
    <string name="title_activity_main">activity_main</string>
    <!-- Strings used for fragments for navigation -->
    <string name="menu_principal_label">Main Menu</string>
    <string name="lista_entregas_label">Main Menu</string>

    <string name="clientes">Client</string>
    <string name="entregas">Delivery</string>
    <string name="produtos">Product</string>
    <string name="previous">Previous</string>

    <string name="cliente">Client Name</string>
    <string name="contacto">Contact</string>
    <string name="data_nascimento">Birth Date</string>
    <string name="morada">Household</string>

    <string name="campo_obrigatorio">Required field</string>

    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>

    <string name="insere_cliente">Insert Customer</string>
    <string name="editar_cliente">Edit Customer</string>
    <string name="apagar_cliente">Delete Customer</string>

    <string name="done">Done</string>
    <string name="erro">Erro</string>

    <string name="delete_client">Delete Customer</string>
    <string name="nome_cliente">Name Client</string>
    <string name="contacto_cliente">Customer Contact</string>
    <string name="morada_cliente">Customer Address</string>
    <string name="data_nascimento_cliente">Customer Birth Date</string>

    <string name="sure">Sure</string>

    <string name="produto">Product</string>
    <string name="descricao">Description</string>

    <string name="insere_produto">Insert Customer</string>
    <string name="editar_produto">Edit Customer</string>
    <string name="eliminar_produto">Delete Customer</string>
    <string name="nome_produto">Name Client</string>
    <string name="descricao_produto">Product Description</string>

    <string name="delete_produto">Delete Product</string>
    <string name="apagar_produto">Delete Product</string>

    <string name="quantidade">Quantity</string>
    <string name="data">Date</string>
    <string name="cliente_entrega">Customer Delivery</string>
    <string name="produto_entrega">Product Delivery</string>
    <string name="localidade_entrega">Delivery Location</string>

    <string name="insere_entrega">Insert Delivery</string>
    <string name="editar_entrega">Edit Delivery</string>
    <string name="eliminar_entrega">Delete Delivery</string>

    <string name="lista_produtos">Product List</string>
    <string name="lista_entrega">Delivery List</string>
    <string name="lista_cliente">Client List</string>




</resources>