<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuPrincipalFragment">

    <Button
        android:id="@+id/buttonEntregas"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/entregas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/buttonClientes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/clientes"
        app:layout_constraintEnd_toEndOf="@+id/buttonEntregas"
        app:layout_constraintStart_toStartOf="@+id/buttonEntregas"
        app:layout_constraintTop_toBottomOf="@+id/buttonEntregas" />

    <Button
        android:id="@+id/buttonProdutos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/produtos"
        app:layout_constraintEnd_toEndOf="@id/buttonClientes"
        app:layout_constraintStart_toStartOf="@id/buttonEntregas"
        app:layout_constraintTop_toBottomOf="@+id/buttonClientes" />
</androidx.constraintlayout.widget.ConstraintLayout>