<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EliminarProdutosFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eliminar_produto"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#FF0000" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome_produto"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="#0027FF" />

        <TextView
            android:id="@+id/textViewNomeProduto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Caixas"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descricao_produto"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#0027FF" />

        <TextView
            android:id="@+id/textViewDescricaoProduto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Fragil" />
    </LinearLayout>
</FrameLayout>