<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".EditarEntregasFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextQuantidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quantidade"
            android:inputType="number" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/data"
                android:inputType="date" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textViewLocalidadeEntrega"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/localidade_entrega" />

                        <Spinner
                            android:id="@+id/spinnerLocalidade"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:minHeight="48dp"
                            tools:ignore="SpeakableTextPresentCheck" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/editTextCliente"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/cliente_entrega" />

                            <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/editTextProduto"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/produto_entrega" />
                            </com.google.android.material.textfield.TextInputLayout>
                        </com.google.android.material.textfield.TextInputLayout>
                    </com.google.android.material.textfield.TextInputLayout>
                </com.google.android.material.textfield.TextInputLayout>
            </com.google.android.material.textfield.TextInputLayout>
        </com.google.android.material.textfield.TextInputLayout>
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>